migration/iis-ai-ai/dctrack-chat-ui/deployment-dctrack-chat-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dctrack-chat-ui
  name: dctrack-chat-ui
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: dctrack-chat-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: '2026-04-08T03:47:28-04:00'
      creationTimestamp: null
      labels:
        app: dctrack-chat-ui
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:1.27-alpine
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        name: nginx
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /usr/share/nginx/html/index.html
          name: html
          subPath: index.html
        - mountPath: /usr/share/nginx/html/prompt.html
          name: prompt-html
          subPath: prompt.html
        - mountPath: /etc/nginx/conf.d/default.conf
          name: nginx-conf
          subPath: nginx.conf
        - mountPath: /usr/share/nginx/html/brs-prompts.html
          name: brs-html
          subPath: brs-prompts.html
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: dctrack-chat-ui-html
        name: html
      - configMap:
          defaultMode: 420
          name: dctrack-chat-prompt-html
        name: prompt-html
      - configMap:
          defaultMode: 420
          name: dctrack-chat-ui-nginx
        name: nginx-conf
      - configMap:
          defaultMode: 420
          name: dctrack-chat-brs-html
        name: brs-html
