migration/iis-ai-ai/dctrack-chat-ui/route-dctrack-chat-ui.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: dctrack-chat-ui
  name: dctrack-chat-ui
spec:
  host: dctrack-chat.apps.ocp419.crucible.iisl.com
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: dctrack-chat-ui
    weight: 100
  wildcardPolicy: None
